--- a/config/prod/prow/core/plugins.yaml
+++ b/config/prod/prow/core/plugins.yaml
@@ -14,30 +14,9 @@
 # Settings for the "approve" plugin.
 approve:
 - repos:
+  - "knative"
+  - "knative-sandbox"
   - "google/knative-gcp"
-  - "knative-sandbox/eventing-kafka"
-  - "knative-sandbox/eventing-rabbitmq"
-  - "knative/caching"
-  - "knative/client"
-  - "knative/client-contrib"
-  - "knative/community"
-  - "knative/docs"
-  - "knative/eventing"
-  - "knative/eventing-contrib"
-  - "knative/eventing-operator"
-  - "knative/net-certmanager"
-  - "knative/net-contour"
-  - "knative/net-http01"
-  - "knative/net-istio"
-  - "knative/net-kourier"
-  - "knative/operator"
-  - "knative/pkg"
-  - "knative/sample-controller"
-  - "knative/sample-source"
-  - "knative/serving"
-  - "knative/serving-operator"
-  - "knative/test-infra"
-  - "knative/website"
   require_self_approval: false
   ignore_review_state: false
 # Settings for the "heart" plugin.
@@ -93,582 +72,57 @@ label:
   - source/prometheus
 # Plugins enabled for each repo.
 plugins:
+  knative:
+  - approve
+  - assign
+  - blunderbuss
+  - buildifier
+  - cat
+  - dog
+  - golint
+  - heart
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - milestone
+  - owners-label
+  - project
+  - shrug
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - welcome
+  - wip
+  - yuks
+  knative-sandbox:
+  - approve
+  - assign
+  - blunderbuss
+  - buildifier
+  - cat
+  - dog
+  - golint
+  - heart
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - milestone
+  - owners-label
+  - project
+  - shrug
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - welcome
+  - wip
+  - yuks
   google/knative-gcp:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative-sandbox/eventing-kafka:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative-sandbox/eventing-rabbitmq:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/caching:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/client:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/client-contrib:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/community:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/docs:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/eventing:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/eventing-contrib:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/eventing-operator:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/net-certmanager:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/net-contour:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/net-http01:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/net-istio:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/net-kourier:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/operator:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/pkg:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/sample-controller:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/sample-source:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/serving:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/serving-operator:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/test-infra:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
-  knative/website:
   - approve
   - assign
   - blunderbuss
@@ -694,122 +148,17 @@ plugins:
   - wip
   - yuks
 external_plugins:
+  knative:
+  - name: needs-rebase
+    events:
+      - issue_comment
+      - pull_request
+  knative-sandbox:
+  - name: needs-rebase
+    events:
+      - issue_comment
+      - pull_request
   google/knative-gcp:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative-sandbox/eventing-kafka:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative-sandbox/eventing-rabbitmq:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/caching:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/client:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/client-contrib:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/community:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/docs:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/eventing:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/eventing-contrib:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/eventing-operator:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/net-certmanager:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/net-contour:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/net-http01:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/net-istio:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/net-kourier:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/operator:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/pkg:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/sample-controller:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/sample-source:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/serving:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/serving-operator:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/test-infra:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative/website:
   - name: needs-rebase
     events:
       - issue_comment
