--- a/tools/config-generator/templates/prow-staging/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow-staging/prow_plugins.yaml
@@ -12,12 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-[[$repos := stringSlice "knative-prow-robot/serving" "knative-prow-robot/test-infra"]]
-
 # Settings for the "approve" plugin.
 approve:
 - repos:
-  [[indent_array 2 $repos]]
+  [[if .ManagedOrgs]]
+  [[indent_array 2 .ManagedOrgs]]
+  [[end]]
+  [[if .ManagedRepos]]
+  [[indent_array 2 .ManagedRepos]]
+  [[end]]
   require_self_approval: false
   ignore_review_state: false
 
@@ -79,7 +82,37 @@ label:
 # Plugins enabled for each repo.
 
 plugins:
-[[range $repos]]
+[[if .ManagedOrgs]]
+[[range .ManagedOrgs]]
+  [[.]]/*:
+  - approve
+  - assign
+  - blunderbuss
+  - buildifier
+  - cat
+  - dog
+  - golint
+  - heart
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - milestone
+  - owners-label
+  - project
+  - shrug
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - welcome
+  - wip
+  - yuks
+[[end]]
+[[end]]
+[[if .ManagedRepos]]
+[[range .ManagedRepos]]
   [[.]]:
   - approve
   - assign
@@ -106,12 +139,24 @@ plugins:
   - wip
   - yuks
 [[end]]
+[[end]]
 
 external_plugins:
-[[range $repos]]
+[[if .ManagedOrgs]]
+[[range .ManagedOrgs]]
+  [[.]]/*:
+  - name: needs-rebase
+    events:
+      - issue_comment
+      - pull_request
+[[end]]
+[[end]]
+[[if .ManagedRepos]]
+[[range .ManagedRepos]]
   [[.]]:
   - name: needs-rebase
     events:
       - issue_comment
       - pull_request
+[[end]]
 [[end]]
