--- a/tools/config-generator/templates/prow-staging/prow_config.yaml
+++ b/tools/config-generator/templates/prow-staging/prow_config.yaml
@@ -1,5 +1,3 @@
-[[$repos := stringSlice "knative-prow-robot/serving" "knative-prow-robot/test-infra"]]
-
 plank:
   job_url_template: '[[.ProwHost]]/view/gcs/[[.GcsBucket]]/{{if or (eq .Spec.Type "presubmit") (eq .Spec.Type "batch")}}[[.PresubmitLogsDir]]/pull{{with .Spec.Refs}}/{{.Org}}_{{.Repo}}{{end}}{{else}}[[.LogsDir]]{{end}}{{if eq .Spec.Type "presubmit"}}/{{with index .Spec.Refs.Pulls 0}}{{.Number}}{{end}}{{else if eq .Spec.Type "batch"}}/batch{{end}}/{{.Spec.Job}}/{{.Status.BuildID}}/'
   report_templates:
@@ -106,8 +104,9 @@ branch-protection:
 
 tide:
   queries:
-  - repos:
-    [[indent_array 4 $repos]]
+  [[if .ManagedOrgs]]
+  - orgs:
+    [[indent_array 4 .ManagedOrgs]]
     labels:
     - lgtm
     - approved
@@ -117,6 +116,20 @@ tide:
     - do-not-merge/work-in-progress
     - do-not-merge/invalid-owners-file
     - needs-rebase
+  [[end]]
+  [[if .ManagedRepos]]
+  - repos:
+    [[indent_array 4 .ManagedRepos]]
+    labels:
+    - lgtm
+    - approved
+    - "cla: yes"
+    missingLabels: &knative_tide_missing_labels
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    - needs-rebase
+  [[end]]
   - repos:
     # Allow PRs for test-infra to be automatically merged without manual approval
     - "[[.TestInfraRepo]]"
