--- a/tools/config-generator/templates/prow/prow_config.yaml
+++ b/tools/config-generator/templates/prow/prow_config.yaml
@@ -1,6 +1,3 @@
-[[$orgs := stringSlice "knative" "knative-sandbox"]]
-[[$repos := stringSlice "google/knative-gcp"]]
-
 plank:
   job_url_template: '[[.ProwHost]]/view/gcs/[[.GcsBucket]]/{{if or (eq .Spec.Type "presubmit") (eq .Spec.Type "batch")}}[[.PresubmitLogsDir]]/pull{{with .Spec.Refs}}/{{.Org}}_{{.Repo}}{{end}}{{else}}[[.LogsDir]]{{end}}{{if eq .Spec.Type "presubmit"}}/{{with index .Spec.Refs.Pulls 0}}{{.Number}}{{end}}{{else if eq .Spec.Type "batch"}}/batch{{end}}/{{.Spec.Job}}/{{.Status.BuildID}}/'
   report_templates:
@@ -107,19 +104,8 @@ branch-protection:
 
 tide:
   queries:
-  - org:
-    [[indent_array 4 $orgs]]
-    labels:
-    - lgtm
-    - approved
-    - "cla: yes"
-    missingLabels: &knative_tide_missing_labels
-    - do-not-merge/hold
-    - do-not-merge/work-in-progress
-    - do-not-merge/invalid-owners-file
-    - needs-rebase
   - repos:
-    [[indent_array 4 $repos]]
+    [[indent_array 4 .TideRepos]]
     labels:
     - lgtm
     - approved
