--- a/tools/config-generator/templates/prow/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow/prow_plugins.yaml
@@ -12,12 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-[[$repos := stringSlice "knative" "knative-sandbox" "google/knative-gcp"]]
-
 # Settings for the "approve" plugin.
 approve:
 - repos:
-  [[indent_array 2 $repos]]
+  [[indent_array 2 .TideRepos]]
   require_self_approval: false
   ignore_review_state: false
 
@@ -79,7 +77,7 @@ label:
 # Plugins enabled for each repo.
 
 plugins:
-[[range $repos]]
+[[range .TideRepos]]
   [[.]]:
   - approve
   - assign
@@ -108,7 +106,7 @@ plugins:
 [[end]]
 
 external_plugins:
-[[range $repos]]
+[[range .TideRepos]]
   [[.]]:
   - name: needs-rebase
     events:
