Add coverage job for eventing-kafka

--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -465,6 +465,9 @@ presubmits:
     - integration-tests: true
       dot-dev: true
       needs-dind: true
+    - go-coverage: true
+      dot-dev: true
+      needs-dind: true
 
   knative-sandbox/eventing-rabbitmq:
     - build-tests: true
