--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -681,6 +681,9 @@ test_groups:
   alert_options:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   num_failures_to_alert: 1
+- name: ci-knative-eventing-kafka-sandbox-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-kafka-sandbox-go-coverage
+  short_text_metric: "coverage"
 - name: ci-knative-serving-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-continuous-beta-prow-tests
 - name: ci-knative-serving-0.11-continuous-beta-prow-tests
@@ -828,6 +831,9 @@ test_groups:
   short_text_metric: "coverage"
 - name: ci-knative-sandbox-eventing-kafka-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-kafka-continuous-beta-prow-tests
+- name: ci-knative-sandbox-eventing-kafka-go-coverage-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-eventing-kafka-go-coverage-beta-prow-tests
+  short_text_metric: "coverage"
 dashboards:
 - name: serving
   dashboard_tab:
@@ -1297,6 +1303,9 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
     num_failures_to_alert: 1
+  - name: coverage
+    test_group_name: ci-knative-eventing-kafka-sandbox-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: knative-0.11
   dashboard_tab:
   - name: serving-continuous
@@ -1832,6 +1841,9 @@ dashboards:
   - name: ci-knative-sandbox-eventing-kafka-continuous
     test_group_name: ci-knative-sandbox-eventing-kafka-continuous-beta-prow-tests
     base_options: "sort-by-failures="
+  - name: ci-knative-sandbox-eventing-kafka-go-coverage
+    test_group_name: ci-knative-sandbox-eventing-kafka-go-coverage-beta-prow-tests
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 dashboard_groups:
 - name: knative
   dashboard_names:
