Config updater job enable DIND

--- a/config/prod/prow/jobs/custom-jobs.yaml
+++ b/config/prod/prow/jobs/custom-jobs.yaml
@@ -312,6 +312,8 @@ postsubmits:
         - "--git-username='Knative Prow Robot'"
         - "--git-email=adrcunha+knative-prow-robot@google.com"
         - "--comment-github-token-file=/etc/prow-updater-robot-github-token/token"
+        securityContext:
+          privileged: true
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -326,9 +328,13 @@ postsubmits:
           mountPath: /root/.ssh
           readOnly: true
         env:
+        - name: DOCKER_IN_DOCKER_ENABLED
+          value: "true"
         - name: GOOGLE_APPLICATION_CREDENTIALS
           value: /etc/test-account/service-account.json
       volumes:
+      - name: docker-graph
+        emptyDir: {}
       - name: test-account
         secret:
           secretName: test-account
