Fixing coverage jobs tool path in prow jobs

--- a/tools/config-generator/templates/prow_postsubmit_gocoverage_job.yaml
+++ b/tools/config-generator/templates/prow_postsubmit_gocoverage_job.yaml
@@ -13,7 +13,7 @@
         command:
         - runner.sh
         args:
-        - "coverage"
+        - "/coverage"
         - "--artifacts=$(ARTIFACTS)"
         - "--cov-threshold-percentage=0"
         [[indent_section 8 "resources" .Base.Resources]]
