--- a/tools/config-generator/templates/prow_presubmit_gocoverage_job.yaml
+++ b/tools/config-generator/templates/prow_presubmit_gocoverage_job.yaml
@@ -18,7 +18,7 @@
         command:
         - runner.sh
         args:
-        - "coverage"
+        - "/coverage"
         - "--postsubmit-job-name=[[.PresubmitPostJobName]]"
         - "--artifacts=$(ARTIFACTS)"
         - "--cov-threshold-percentage=[[.Base.GoCoverageThreshold]]"
