Revert "Cleanup images (#2112)"
This reverts commit f44a701116b0c4013c464db9cc9e295407f384e5.

--- a/tools/config-generator/templates/prow_postsubmit_gocoverage_job.yaml
+++ b/tools/config-generator/templates/prow_postsubmit_gocoverage_job.yaml
@@ -11,9 +11,8 @@
       - image: [[.Base.Image]]
         imagePullPolicy: Always
         command:
-        - runner.sh
+        - "/coverage"
         args:
-        - "coverage"
         - "--artifacts=$(ARTIFACTS)"
         - "--cov-threshold-percentage=0"
         [[indent_section 8 "resources" .Base.Resources]]
