--- a/tools/config-generator/templates/prow_presubmit_gocoverate_job.yaml
+++ b/tools/config-generator/templates/prow_presubmit_gocoverate_job.yaml
@@ -16,9 +16,8 @@
       - image: [[.Base.Image]]
         imagePullPolicy: Always
         command:
-        - runner.sh
+        - "/coverage"
         args:
-        - "coverage"
         - "--postsubmit-job-name=[[.PresubmitPostJobName]]"
         - "--artifacts=$(ARTIFACTS)"
         - "--cov-threshold-percentage=[[.Base.GoCoverageThreshold]]"
