--- a/images/prow-tests-go113/Makefile
+++ b/images/prow-tests-go113/Makefile
@@ -1,4 +1,4 @@
-# Copyright 2019 The Knative Authors
+# Copyright 2020 The Knative Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,11 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-IMAGE_NAME = prow-tests
+IMAGE_NAME = prow-tests-go113
 include ../simple-image.mk
-
-push_beta: confirm-master build
-	docker tag $(IMG):$(TAG) $(IMG):beta
-	docker push $(IMG):beta
-
-push:: push_beta
