--- a/tools/config-generator/templates/prow-staging/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow-staging/prow_plugins.yaml
@@ -88,9 +88,6 @@ config_updater:
 # Plugins enabled for each repo.
 
 plugins:
-  [[.TestInfraRepo]]
-  - config-updater
-
 [[if .ManagedOrgs]]
 [[range .ManagedOrgs]]
   [[.]]:
@@ -149,6 +146,8 @@ plugins:
   - yuks
 [[end]]
 [[end]]
+  [[.TestInfraRepo]]:
+  - config-updater
 
 external_plugins:
 [[if .ManagedOrgs]]
