--- a/tools/config-generator/templates/prow-staging/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow-staging/prow_plugins.yaml
@@ -84,6 +84,7 @@ config_updater:
   maps:
     [[.JobConfigPath]]:
       name: job-config
+      gzip: true
 
 # Plugins enabled for each repo.
 
@@ -148,6 +149,30 @@ plugins:
 [[end]]
   [[.TestInfraRepo]]:
   - config-updater
+  - approve
+  - assign
+  - blunderbuss
+  - buildifier
+  - cat
+  - dog
+  - golint
+  - heart
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - milestone
+  - owners-label
+  - project
+  - shrug
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - welcome
+  - wip
+  - yuks
 
 external_plugins:
 [[if .ManagedOrgs]]
