Use updateconfig plugin for updating prow job configs (#2127)
* Use updateconfig plugin for updating prow job configs

See https://github.com/kubernetes/test-infra/tree/master/prow/plugins/updateconfig

* Fix broken config

* plugins config is blind override, have to re-declare for case of joint

--- a/config/staging/prow/core/plugins.yaml
+++ b/config/staging/prow/core/plugins.yaml
@@ -69,6 +69,11 @@ label:
   - source/github
   - source/kafka
   - source/prometheus
+config_updater:
+  maps:
+    config/prod/staging/jobs/*.yaml:
+      name: job-config
+      gzip: true
 # Plugins enabled for each repo.
 plugins:
   knative-prow-robot/serving:
@@ -97,6 +102,32 @@ plugins:
   - wip
   - yuks
   knative-prow-robot/test-infra:
+  - approve
+  - assign
+  - blunderbuss
+  - buildifier
+  - cat
+  - dog
+  - golint
+  - heart
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - milestone
+  - owners-label
+  - project
+  - shrug
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - welcome
+  - wip
+  - yuks
+  knative-prow-robot/test-infra:
+  - config-updater
   - approve
   - assign
   - blunderbuss
