--- a/config/prod/prow/jobs/custom-jobs.yaml
+++ b/config/prod/prow/jobs/custom-jobs.yaml
@@ -298,6 +298,8 @@ postsubmits:
     max_concurrency: 1
     cluster: "prow-trusted"
     run_if_changed: "^(config/(prod|staging)/(prow|build-cluster)/(cluster|core|jobs|boskos|testgrid)/.*.yaml)|(tools/config-generator/templates/(prow|prow-staging)/.*.yaml)$"
+    branches:
+    - "master"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests-go114:stable
