--- a/tools/config-generator/templates/prow-staging/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow-staging/prow_plugins.yaml
@@ -79,6 +79,13 @@ label:
   - source/github
   - source/kafka
   - source/prometheus
+
+config_updater:
+  maps:
+    [[.JobConfigPath]]:
+      name: job-config
+      gzip: true
+
 # Plugins enabled for each repo.
 
 plugins:
@@ -140,6 +147,8 @@ plugins:
   - yuks
 [[end]]
 [[end]]
+  [[.TestInfraRepo]]:
+  - config-updater
 
 external_plugins:
 [[if .ManagedOrgs]]
