--- a/config/staging/prow/core/plugins.yaml
+++ b/config/staging/prow/core/plugins.yaml
@@ -14,8 +14,7 @@
 # Settings for the "approve" plugin.
 approve:
 - repos:
-  - "knative-prow-robot/serving"
-  - "knative-prow-robot/test-infra"
+  - "knative-prow-robot"
   require_self_approval: false
   ignore_review_state: false
 # Settings for the "heart" plugin.
@@ -69,9 +68,14 @@ label:
   - source/github
   - source/kafka
   - source/prometheus
+config_updater:
+  maps:
+    config/prod/staging/jobs/*.yaml:
+      name: job-config
+      gzip: true
 # Plugins enabled for each repo.
 plugins:
-  knative-prow-robot/serving:
+  knative-prow-robot:
   - approve
   - assign
   - blunderbuss
@@ -97,37 +101,9 @@ plugins:
   - wip
   - yuks
   knative-prow-robot/test-infra:
-  - approve
-  - assign
-  - blunderbuss
-  - buildifier
-  - cat
-  - dog
-  - golint
-  - heart
-  - help
-  - hold
-  - label
-  - lgtm
-  - lifecycle
-  - milestone
-  - owners-label
-  - project
-  - shrug
-  - size
-  - skip
-  - trigger
-  - verify-owners
-  - welcome
-  - wip
-  - yuks
+  - config-updater
 external_plugins:
-  knative-prow-robot/serving:
-  - name: needs-rebase
-    events:
-      - issue_comment
-      - pull_request
-  knative-prow-robot/test-infra:
+  knative-prow-robot:
   - name: needs-rebase
     events:
       - issue_comment
