Also update prow core/plugin using configupdater

--- a/tools/config-generator/templates/prow-staging/prow_plugins.yaml
+++ b/tools/config-generator/templates/prow-staging/prow_plugins.yaml
@@ -85,6 +85,10 @@ config_updater:
     [[.JobConfigPath]]:
       name: job-config
       gzip: true
+    [[.CoreConfigPath]]:
+      name: config
+    [[.PluginConfigPath]]:
+      name: plugins
 
 # Plugins enabled for each repo.
 
