--- a/config/staging/prow/core/plugins.yaml
+++ b/config/staging/prow/core/plugins.yaml
@@ -73,6 +73,10 @@ config_updater:
     config/prod/staging/jobs/*.yaml:
       name: job-config
       gzip: true
+    config/prod/staging/core/config.yaml:
+      name: config
+    config/prod/staging/core/plugins.yaml:
+      name: plugins
 # Plugins enabled for each repo.
 plugins:
   knative-prow-robot:
