--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -613,6 +613,72 @@ test_groups:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   alert_stale_results_hours: 170
   num_failures_to_alert: 1
+- name: ci-knative-serving-0.15-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.15-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-serving-0.15-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.15-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-client-0.15-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.15-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-client-0.15-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.15-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-eventing-0.15-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.15-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-eventing-0.15-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.15-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-eventing-contrib-0.15-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.15-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-eventing-contrib-0.15-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.15-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-serving-operator-0.15-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.15-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-serving-operator-0.15-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.15-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-eventing-operator-0.15-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.15-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-knative-eventing-operator-0.15-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.15-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-google-knative-gcp-continuous
   gcs_prefix: knative-prow/logs/ci-google-knative-gcp-continuous
   alert_stale_results_hours: 3
@@ -662,6 +728,17 @@ test_groups:
     alert_mail_to_addresses: "prime-engprod-sea@google.com"
   alert_stale_results_hours: 170
   num_failures_to_alert: 1
+- name: ci-google-knative-gcp-0.15-continuous
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.15-continuous
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  num_failures_to_alert: 3
+- name: ci-google-knative-gcp-0.15-dot-release
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.15-dot-release
+  alert_options:
+    alert_mail_to_addresses: "prime-engprod-sea@google.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-kafka-sandbox-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-kafka-sandbox-continuous
   alert_stale_results_hours: 3
@@ -694,6 +771,8 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.13-continuous-beta-prow-tests
 - name: ci-knative-serving-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.14-continuous-beta-prow-tests
+- name: ci-knative-serving-0.15-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.15-continuous-beta-prow-tests
 - name: ci-knative-serving-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
@@ -707,6 +786,8 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-client-0.13-continuous-beta-prow-tests
 - name: ci-knative-client-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-client-0.14-continuous-beta-prow-tests
+- name: ci-knative-client-0.15-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.15-continuous-beta-prow-tests
 - name: ci-knative-client-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-client-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
@@ -727,6 +808,8 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.13-continuous-beta-prow-tests
 - name: ci-knative-eventing-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.14-continuous-beta-prow-tests
+- name: ci-knative-eventing-0.15-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.15-continuous-beta-prow-tests
 - name: ci-knative-eventing-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
@@ -740,6 +823,8 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.13-continuous-beta-prow-tests
 - name: ci-knative-eventing-contrib-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.14-continuous-beta-prow-tests
+- name: ci-knative-eventing-contrib-0.15-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.15-continuous-beta-prow-tests
 - name: ci-knative-eventing-contrib-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
@@ -772,6 +857,8 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.13-continuous-beta-prow-tests
 - name: ci-knative-serving-operator-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.14-continuous-beta-prow-tests
+- name: ci-knative-serving-operator-0.15-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.15-continuous-beta-prow-tests
 - name: ci-knative-serving-operator-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-serving-operator-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
@@ -785,6 +872,8 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.13-continuous-beta-prow-tests
 - name: ci-knative-eventing-operator-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.14-continuous-beta-prow-tests
+- name: ci-knative-eventing-operator-0.15-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.15-continuous-beta-prow-tests
 - name: ci-knative-eventing-operator-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
@@ -796,6 +885,8 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.13-continuous-beta-prow-tests
 - name: ci-google-knative-gcp-0.14-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.14-continuous-beta-prow-tests
+- name: ci-google-knative-gcp-0.15-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.15-continuous-beta-prow-tests
 - name: ci-google-knative-gcp-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-google-knative-gcp-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
@@ -1602,6 +1693,80 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
     num_failures_to_alert: 3
+- name: knative-0.15
+  dashboard_tab:
+  - name: serving-continuous
+    test_group_name: ci-knative-serving-0.15-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: serving-dot-release
+    test_group_name: ci-knative-serving-0.15-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: client-continuous
+    test_group_name: ci-knative-client-0.15-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: client-dot-release
+    test_group_name: ci-knative-client-0.15-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-continuous
+    test_group_name: ci-knative-eventing-0.15-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-dot-release
+    test_group_name: ci-knative-eventing-0.15-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-continuous
+    test_group_name: ci-knative-eventing-contrib-0.15-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-contrib-dot-release
+    test_group_name: ci-knative-eventing-contrib-0.15-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: serving-operator-continuous
+    test_group_name: ci-knative-serving-operator-0.15-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: serving-operator-dot-release
+    test_group_name: ci-knative-serving-operator-0.15-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-operator-continuous
+    test_group_name: ci-knative-eventing-operator-0.15-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: eventing-operator-dot-release
+    test_group_name: ci-knative-eventing-operator-0.15-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
 - name: google-0.12
   dashboard_tab:
   - name: knative-gcp-continuous
@@ -1644,6 +1809,20 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "prime-engprod-sea@google.com"
     num_failures_to_alert: 3
+- name: google-0.15
+  dashboard_tab:
+  - name: knative-gcp-continuous
+    test_group_name: ci-google-knative-gcp-0.15-continuous
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
+  - name: knative-gcp-dot-release
+    test_group_name: ci-google-knative-gcp-0.15-dot-release
+    base_options: "sort-by-name="
+    alert_options:
+      alert_mail_to_addresses: "prime-engprod-sea@google.com"
+    num_failures_to_alert: 3
 - name: beta-prow-tests
   dashboard_tab:
   - name: ci-knative-serving-continuous
@@ -1660,6 +1839,9 @@ dashboards:
     base_options: "sort-by-failures="
   - name: ci-knative-serving-0.14-continuous
     test_group_name: ci-knative-serving-0.14-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-knative-serving-0.15-continuous
+    test_group_name: ci-knative-serving-0.15-continuous-beta-prow-tests
     base_options: "sort-by-failures="
   - name: ci-knative-serving-go-coverage
     test_group_name: ci-knative-serving-go-coverage-beta-prow-tests
@@ -1678,6 +1860,9 @@ dashboards:
     base_options: "sort-by-failures="
   - name: ci-knative-client-0.14-continuous
     test_group_name: ci-knative-client-0.14-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-knative-client-0.15-continuous
+    test_group_name: ci-knative-client-0.15-continuous-beta-prow-tests
     base_options: "sort-by-failures="
   - name: ci-knative-client-go-coverage
     test_group_name: ci-knative-client-go-coverage-beta-prow-tests
@@ -1706,6 +1891,9 @@ dashboards:
   - name: ci-knative-eventing-0.14-continuous
     test_group_name: ci-knative-eventing-0.14-continuous-beta-prow-tests
     base_options: "sort-by-failures="
+  - name: ci-knative-eventing-0.15-continuous
+    test_group_name: ci-knative-eventing-0.15-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
   - name: ci-knative-eventing-go-coverage
     test_group_name: ci-knative-eventing-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
@@ -1723,6 +1911,9 @@ dashboards:
     base_options: "sort-by-failures="
   - name: ci-knative-eventing-contrib-0.14-continuous
     test_group_name: ci-knative-eventing-contrib-0.14-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-knative-eventing-contrib-0.15-continuous
+    test_group_name: ci-knative-eventing-contrib-0.15-continuous-beta-prow-tests
     base_options: "sort-by-failures="
   - name: ci-knative-eventing-contrib-go-coverage
     test_group_name: ci-knative-eventing-contrib-go-coverage-beta-prow-tests
@@ -1766,6 +1957,9 @@ dashboards:
   - name: ci-knative-serving-operator-0.14-continuous
     test_group_name: ci-knative-serving-operator-0.14-continuous-beta-prow-tests
     base_options: "sort-by-failures="
+  - name: ci-knative-serving-operator-0.15-continuous
+    test_group_name: ci-knative-serving-operator-0.15-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
   - name: ci-knative-serving-operator-go-coverage
     test_group_name: ci-knative-serving-operator-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
@@ -1784,6 +1978,9 @@ dashboards:
   - name: ci-knative-eventing-operator-0.14-continuous
     test_group_name: ci-knative-eventing-operator-0.14-continuous-beta-prow-tests
     base_options: "sort-by-failures="
+  - name: ci-knative-eventing-operator-0.15-continuous
+    test_group_name: ci-knative-eventing-operator-0.15-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
   - name: ci-knative-eventing-operator-go-coverage
     test_group_name: ci-knative-eventing-operator-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
@@ -1798,6 +1995,9 @@ dashboards:
     base_options: "sort-by-failures="
   - name: ci-google-knative-gcp-0.14-continuous
     test_group_name: ci-google-knative-gcp-0.14-continuous-beta-prow-tests
+    base_options: "sort-by-failures="
+  - name: ci-google-knative-gcp-0.15-continuous
+    test_group_name: ci-google-knative-gcp-0.15-continuous-beta-prow-tests
     base_options: "sort-by-failures="
   - name: ci-google-knative-gcp-go-coverage
     test_group_name: ci-google-knative-gcp-go-coverage-beta-prow-tests
