--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -1,4 +1,4 @@
-# Copyright 2018 The Knative Authors
+# Copyright 2020 The Knative Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -186,6 +186,16 @@ presubmits:
       dot-dev: true
     - integration-tests: true
       dot-dev: true
+      needs-monitor: true
+      args:
+        - "--run-test"
+        - "./test/e2e-tests.sh"
+    - custom-test: upgrade-tests
+      dot-dev: true
+      needs-monitor: true
+      args:
+        - "--run-test"
+        - "./test/e2e-upgrade-tests.sh"
     - go-coverage: true
       dot-dev: true
 
